--- a/recipes/Homo_sapiens/GRCh37/grch37-reference-genome/meta.yaml
+++ b/recipes/Homo_sapiens/GRCh37/grch37-reference-genome/meta.yaml
@@ -1,8 +1,9 @@
 about:
-  summary: 'GRCh37 reference genome from 1000 genomes '
+  summary: GRCh37 reference genome from 1000 genomes
 build:
   binary_relocation: false
   detect_binary_files_with_prefix: false
+  noarch: generic
   number: 0
 extra:
   authors: jrb
